--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DJ TUNEII</title>
   <style>
-    /* Reset bàsic */
+    /* Estils bàsics i reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       background: black;
       color: white;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
     }
-
     /* Contenidor del vídeo */
     #intro {
       position: fixed;
@@ -28,14 +26,12 @@
       z-index: 10;
       background: black;
     }
-
     #intro video {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
-
-    /* Contingut principal ocult fins que acabi el vídeo */
+    /* Contingut principal ocult fins que s’acabi el vídeo */
     #content {
       opacity: 0;
       transform: translateY(50px);
@@ -43,23 +39,19 @@
       padding: 50px 20px;
       text-align: center;
     }
-
     #content.show {
       opacity: 1;
       transform: translateY(0);
     }
-
     h1 {
       font-size: 3rem;
+      margin-bottom: 20px;
     }
-
     h2 {
       font-size: 2rem;
-      margin: 20px 0;
+      margin-bottom: 40px;
       font-weight: normal;
     }
-
-    /* Formulari JotForm */
     .form-container {
       margin-top: 40px;
     }
@@ -70,7 +62,7 @@
   <!-- Intro amb vídeo -->
   <div id="intro">
     <video autoplay muted playsinline>
-      <source src="intro.mp4" type="video/mp4">
+      <source src="https://drive.google.com/uc?export=download&id=1pv2Y_78HbT4TdV9g5VZSep37Wov2x26x" type="video/mp4">
       El teu navegador no suporta vídeo HTML5.
     </video>
   </div>
@@ -80,7 +72,6 @@
     <h1>DJ TUNEII</h1>
     <h1>DJ TUNEII</h1>
     <h2>"Tria a un DJ per les habilitats, no per l'edat"</h2>
-
     <div class="form-container">
       <script type="text/javascript" src="https://form.jotform.com/jsform/252435833687063"></script>
     </div>
@@ -92,7 +83,7 @@
     const content = document.getElementById("content");
 
     video.addEventListener("ended", () => {
-      intro.style.display = "none"; // amaga el vídeo
+      intro.style.display = "none"; // oculta el vídeo
       content.classList.add("show"); // mostra el contingut amb animació
     });
   </script>
